# NeonTreeClassification

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.py  README.md  compare_modalities.py  process_tiles_to_crowns.py  pyproject.toml  quickstart.py  setup.py  test_setup.py  train.py  training_data_clean.csv
.github/workflows/: ci.yml
SLURM/: crowns.sh  dask.sh
docs/: README.md  advanced_usage.md  processing.md  taxonomic_levels.md  training.md  visualization.md
examples/: compare_modalities.py  train.py
neon_tree_classification/: __init__.py
neon_tree_classification/core/: datamodule.py  dataset.py  visualization.py
neon_tree_classification/data/: __init__.py  datamodule.py  dataset.py  neon_downloader.py  shapefile_processor.py
neon_tree_classification/data/shapefile_processing/: README.md  extracted_crown_metadata.gpkg  validate_and_extract_crown_metadata.py
neon_tree_classification/inference/: __init__.py  model_registry.py  predictor.py  preprocessing.py  utils.py
neon_tree_classification/inference/label_mappings/: genus_labels.json  species_labels.json
neon_tree_classification/models/: __init__.py  architectures.py  hsi_models.py  lidar_models.py  lightning_modules.py  rgb_models.py
neon_tree_classification/processing/: __init__.py  tile_processor.py
neon_tree_classification/utils/: __init__.py  flatten_neon_tiles.py  hsi_conversion_optimized.py  hsi_conversion_safe.py
notebooks/: visualization.ipynb
processing/: neon_downloader.py  neon_downloader_clean.py  shapefile_processor.py
processing/misc/: analyze_dataset_labels.py  check_species_distribution.py  data_combine_analyzer.ipynb  dataset_combiner.py  filter_hsi.py  filter_rare_species.py  inspect_labels.py
processing/neon_data_processing/: README.md  convert_tif_to_npy.py  create_training_csv.py  crop_crowns_multimodal.py  curate_tiles.py  hsi_convert_h5_to_tif.py
processing/shapefile_processing/: convert_csv_to_gpkg_format.py  extracted_crown_metadata.gpkg  validate_and_extract_crown_metadata.py
scripts/: create_label_mappings.py  crop_crowns_from_tiles.py  download_dataset.py  download_neon_all_modalities.py  generate_sample_images.py  get_dataloaders.py  process_tiles_to_crowns.py  test_inference.py  test_shapefile_processor.py  update_readme.py  upload_to_huggingface.py
src/: convert_hyperspectral.py  curate_shp_files.py  deepforest_parallel.py  download_neon_all_modalities.py  download_neon_data.py  generate_crowns.py  models.py  neon_utils.py
tests/: __init__.py  test_imports.py
